--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
