--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2"
   },
