--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@types/nodemailer": "^6.4.14",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
     "next": "13.5.6",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
