--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
+    "netlify-cli": "^17.7.0",
     "next": "13.5.6",
     "nodemailer": "^6.9.7",
     "react": "^18",
