--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@netlify/plugin-nextjs": "^4.41.2",
     "@types/nodemailer": "^6.4.14",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
