--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
+    "global": "^4.4.0",
     "netlify-cli": "^17.7.0",
     "next": "13.5.6",
     "nodemailer": "^6.9.7",
+    "parse-json": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
@@ -37,6 +39,6 @@
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "^5.3.2"
   }
 }
