--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
-    "react-icons": "^4.11.0",
-    "react-intersection-observer": "^9.5.2"
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@types/node": "^20",
