--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
