--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.16",
     "global": "^4.4.0",
+    "lucide-react": "^0.294.0",
     "netlify-cli": "^17.7.0",
     "next": "13.5.6",
     "nodemailer": "^6.9.7",
