--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@netlify/plugin-nextjs": "^4.41.2",
+    "@types/aos": "^3.0.7",
     "@types/nodemailer": "^6.4.14",
+    "aos": "^3.0.0-beta.6",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.16",
