--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
+    "react-scroll-parallax": "^3.4.5",
     "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
