--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@netlify/plugin-nextjs": "^4.41.2",
+    "@react-three/fiber": "^8.15.12",
     "@types/aos": "^3.0.7",
     "@types/nodemailer": "^6.4.14",
     "aos": "^3.0.0-beta.6",
@@ -27,16 +28,21 @@
     "next": "13.5.6",
     "nodemailer": "^6.9.7",
     "parse-json": "^8.1.0",
+    "popmotion": "^11.0.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
-    "tailwind-merge": "^2.1.0"
+    "react-parallax": "^3.5.1",
+    "react-scroll-parallax": "^3.4.5",
+    "tailwind-merge": "^2.1.0",
+    "three": "^0.159.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.159.0",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
