--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@netlify/plugin-nextjs": "^4.41.2",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/aos": "^3.0.7",
     "@types/nodemailer": "^6.4.14",
     "aos": "^3.0.0-beta.6",
