--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/aos": "^3.0.7",
     "@types/nodemailer": "^6.4.14",
+    "@types/react-modal": "^3.16.3",
     "aos": "^3.0.0-beta.6",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
@@ -34,6 +35,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
+    "react-player": "^2.16.0",
     "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
